<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app">

    <com.example.android.sunshine.app.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        custom:minLength="3" />

    <!--<EditTextPreference-->
    <!--android:title="@string/pref_location_label"-->
    <!--android:key="@string/pref_location_key"-->
    <!--android:defaultValue="@string/pref_location_default"-->
    <!--android:inputType="text"-->
    <!--android:singleLine="true"/>-->

    <ListPreference
        android:defaultValue="@string/pref_unit_metric"
        android:entries="@array/pref_unit_titles"
        android:entryValues="@array/pref_unit_values"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notification_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notification_label" />


    <!--<CheckBoxPreference-->
    <!--android:key="example_checkbox"-->
    <!--android:title="@string/pref_title_social_recommendations"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:defaultValue="true" />-->


    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
    <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
    <!--android:key="example_list"-->
    <!--android:title="@string/pref_title_add_friends_to_messages"-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null" />-->

</PreferenceScreen>
